# uccl

./: .gitignore  .gitmodules  MANIFEST.in  Makefile  README.md  build.sh  build_and_install.sh  common.py  config_nic.sh  docker_build.sh  docker_build_and_install.sh  extra_config.sh  format.sh  nodes.txt  pyproject.toml  rsync.py  run.sh  setup.py  setup.sh  setup_all.py  setup_extra.sh  setup_nic.sh  shared.py  sync.sh
advanced04-aws-afxdp/: Makefile  af_xdp_kern.c  af_xdp_user.c  af_xdp_user_efa.c  dgram_gen  fi_efagen.c  fi_efasink.c  fi_pingpong.c  fi_udpgen.c  run.sh  sync.sh
af_xdp/: .gitignore  Makefile  client.cc  client_tcp.cc  client_xdp.c  server.cc  server1.cc  server1_xdp.c  server_tcp.cc  server_xdp.c  util_tcp.h
afxdp/: .gitignore  Makefile  README.md  afxdp_daemon_main.cc  afxdp_setup_main.cc  afxdp_use_main.cc  client.cc  client_main.cc  client_tcp.cc  client_tcp_ep  client_tcp_ep.cc  client_tcp_ep_main.cc  client_tcp_main.cc  client_xdp.c  ebpf_client.c  ebpf_server_direct.c  ebpf_transport.c  ebpf_transport_pktloss.c  ebpf_util.h  exp_plot.ipynb  exp_res.csv  exp_run.py  nccl_plugin.cc  rss_hash_test.cc  run_exp.py  run_nccl_test.sh  server.cc  server1.cc  server1_xdp.c  server_direct.cc  server_direct_main.cc  server_main.cc  server_tcp.cc  server_tcp_ep  server_tcp_main.cc  server_xdp.c  tcp_cubic.h  timely.h  timely_test.cc  timing_wheel.h  (+27 more)
aws_efa/: .gitignore  Makefile  af_xdp_kern.c  af_xdp_kern_efa.c  af_xdp_user.c  af_xdp_user_efa.c  cuda_concurrent.cu  cuda_event.cu  cuda_memcpy.cu  cuda_memcpy_async.cu  cuda_memcpy_gpu.cu  cuda_persist_kernel.cu  customized_resnet_ddp.py  customized_resnet_ddp.sh  customized_resnet_ddp_layer_reduce.py  customized_resnet_ddp_layer_reduce.sh  customized_resnet_ddp_layer_reduce_async.py  customized_resnet_ddp_layer_reduce_async.sh  customized_resnet_ddp_layer_reduce_async_ud.sh  customized_resnet_ddp_layer_reduce_ud.sh  ddp2.py  deepseek_ep.py  efa_load_latency.cc  efa_sge_mr.cc  efa_sge_mr.cu  efa_shared_cp_libfabric.cc  ep_results.md  fi_efasink.c  fi_info.c  pcie_bw.py  resnet_ddp.sh  run_cuda_test_nsys.sh  run_ddp.sh  run_ep_benchmark_nccl.sh  run_ep_benchmark_uccl.sh  run_nccl_test.sh  run_nccl_test_nsys.sh  run_resnet_nccl.sh  run_resnet_uccl.sh
doc/: README.md  README_dev.md  dev.md  dev_afxdp.md  dev_efa.md  dev_rdma.md
docker/: Dockerfile.cuda  Dockerfile.efa  Dockerfile.gh  Dockerfile.rocm
efa/: .clocignore  Makefile  README.md  afxdp_daemon_main.cc  eqds.cc  eqds.h  hostname  hostname_single_proc  hosts  hosts_single_proc  nccl_plugin.cc  p4d-24xl-topo.xml  perftest.patch  plugin_test.cc  rdma_test.cc  run_nccl_test.sh  run_nccl_test_debug.sh  run_nccl_test_demo.sh  run_nccl_test_mp.sh  run_nccl_test_nsys.sh  run_nccl_test_profile.sh  run_nccl_test_single_proc.sh  scattered_memcpy.cu  scattered_memcpy.cuh  scattered_memcpy_test.cc  sync_code.sh  tcp_cubic.h  timely.h  timely_test.cc  timing_wheel.h  transport.cc  transport.h  transport_cc.h  transport_config.h  transport_header.h  transport_test.cc  util.h  util_buffpool.h  util_cb.h  util_efa.cc  (+13 more)
examples/: README.md  ddp_amd_run.sh  ddp_amd_test.py  multi_pg_run.sh  multi_pg_test.py
gpu_driven/: .gitignore  Makefile  MakefileHip  README.md  batched_gpu_to_cpu_bench  batched_gpu_to_cpu_bench.cu  benchmark_remote.py  gpu_to_cpu_bench.cu  pcie_bench  pcie_bench.cu  test_local_proxy.py
kvtrans/: Makefile  README.md  benchmark.py  engine.cc  engine.h  pybind_engine.cc  test_engine.py
misc/: .gitignore  Makefile  README.md  af_xdp_kern.c  af_xdp_user.c  af_xdp_user_efa.c  cluster_monitor.sh  cuda_concurrent.cu  cuda_event.cu  cuda_greenctx.cu  cuda_memcpy.cu  cuda_memcpy_async.cu  cuda_memcpy_gpu.cu  cuda_persist_kernel.cu  customized_resnet_ddp_layer_reduce_async.py  customized_resnet_ddp_layer_reduce_async.sh  customized_resnet_ddp_layer_reduce_async_ud.sh  customized_resnet_ddp_layer_reduce_ud.sh  ddp.py  ddp2.py  efa_load_latency.cc  efa_sge_mr.cc  efa_shared_cp_ibverbs.cc  efa_shared_cp_libfabric.cc  fi_efagen.c  fi_efasink.c  fi_pingpong.c  fi_udpgen.c  hostfile  pcie_bw.py  resnet_ddp.py  run_ddp.sh  run_ep_benchmark_nccl.sh  run_ep_benchmark_uccl.sh  run_resnet_nccl.sh  run_resnet_uccl.sh
p2p/: Makefile  MakefileHip  README.md  benchmark  benchmark.py  collective.py  engine.cc  engine.h  pybind_engine.cc  test_engine.py  test_engine_metadata.py  test_engine_read.py
primus_test/: exp_pretrain.yaml  run_uccl_multi.sh  uccl.sh
rccl/: CHANGELOG.md  CMakeLists.txt  LICENSE.txt  NOTICES.txt  README.md  install.sh
rccl-tests/: .gitignore  CMakeLists.txt  README.md
rccl-tests/.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
rccl-tests/.jenkins/: common.groovy  precheckin.groovy  staticanalysis.groovy
rccl-tests/cmake/: Dependencies.cmake
rccl-tests/doc/: PERFORMANCE.md
rccl-tests/src/: CMakeLists.txt  Makefile  all_gather.cu  all_reduce.cu  alltoall.cu  alltoallv.cu  broadcast.cu  common.cu  common.h  gather.cu  hypercube.cu  reduce.cu  reduce_scatter.cu  scatter.cu  sendrecv.cu
rccl-tests/verifiable/: Makefile  verifiable.cu
rdma/: .gitignore  Makefile  Makefile_hip  README.md  afxdp_daemon_main.cc  configure_rdma_ip.sh  ebpf_afxdp_test.c  ebpf_util.h  eqds.cc  eqds.h  flow_collision.md  hosts_ib  hosts_ib_multi_process  hosts_ib_single_process  incast_test.cc  intra_test.cc  nccl_plugin.cc  pcb.h  plugin_test.cc  rdma_io.cc  rdma_io.h  rdma_test.cc  rss_hash_test.cc  run_gh200_test.sh  run_ib.sh  run_nccl_test.sh  run_rccl_test.sh  run_rccl_test_hpcfund.sh  swift.h  sync_code.sh  sync_nccl-tests.sh  sync_repo.sh  timely.h  timely_test.cc  timing_wheel.h  transport.cc  transport.h  transport_cc.h  transport_config.h  transport_test.cc  (+12 more)
rdma_cuda/: .gitignore  Makefile  README.md  eqds.h  nccl_plugin.cc  pcb.h  plugin_test.cc  rdma_test.cc  run_nccl_test.sh  swift.h  transport.cc  transport_config.h  util.h  util_jring.h  util_latency.h  util_list.h  util_lrpc.cc  util_lrpc.h  util_pause.h  util_rdma.cc  util_rdma.h  util_shared_pool.h  util_timer.h
rdma_hip/: .gitignore  Makefile  README.md  eqds.h  nccl_plugin.cc  swift.h  (+11 more)
(+324 files in other folders)
